[package]
name = "cft-db"
version = "0.1.0"
authors = ["chenfeitong <chenfeitong@bytedance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1"
tracing = "0.1"
serde = "1"
async-trait = "0.1"
bytes = "1"