[package]
name = "cft-db"
version = "0.1.0"
authors = ["chenfeitong <chenfeitong@bytedance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
serde = "1"
async-trait = "0.1"
bytes = "1"
thiserror = "1"
mimalloc = { version = "0.1", default-features = false }
memmap2 = "0.2"
crc = "1"
futures = "0.3"

[dev-dependencies]
tempfile = "3"
